--- a/abis/SystemSettings.json
+++ b/abis/SystemSettings.json
@@ -53,6 +53,32 @@
     "inputs": [
       {
         "indexed": false,
+        "internalType": "uint256",
+        "name": "collapseFeeRate",
+        "type": "uint256"
+      }
+    ],
+    "name": "CollapseFeeRateUpdated",
+    "type": "event"
+  },
+  {
+    "anonymous": false,
+    "inputs": [
+      {
+        "indexed": false,
+        "internalType": "address",
+        "name": "newCollateralManager",
+        "type": "address"
+      }
+    ],
+    "name": "CollateralManagerUpdated",
+    "type": "event"
+  },
+  {
+    "anonymous": false,
+    "inputs": [
+      {
+        "indexed": false,
         "internalType": "enum MixinSystemSettings.CrossDomainMessageGasLimits",
         "name": "gasLimitType",
         "type": "uint8"
@@ -157,6 +183,19 @@
       {
         "indexed": false,
         "internalType": "uint256",
+        "name": "interactionDelay",
+        "type": "uint256"
+      }
+    ],
+    "name": "InteractionDelayUpdated",
+    "type": "event"
+  },
+  {
+    "anonymous": false,
+    "inputs": [
+      {
+        "indexed": false,
+        "internalType": "uint256",
         "name": "newRatio",
         "type": "uint256"
       }
@@ -201,6 +240,19 @@
       }
     ],
     "name": "LiquidationRatioUpdated",
+    "type": "event"
+  },
+  {
+    "anonymous": false,
+    "inputs": [
+      {
+        "indexed": false,
+        "internalType": "uint256",
+        "name": "minCratio",
+        "type": "uint256"
+      }
+    ],
+    "name": "MinCratioRatioUpdated",
     "type": "event"
   },
   {
@@ -566,6 +618,48 @@
     "constant": true,
     "inputs": [
       {
+        "internalType": "address",
+        "name": "collateral",
+        "type": "address"
+      }
+    ],
+    "name": "collapseFeeRate",
+    "outputs": [
+      {
+        "internalType": "uint256",
+        "name": "",
+        "type": "uint256"
+      }
+    ],
+    "payable": false,
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "constant": true,
+    "inputs": [
+      {
+        "internalType": "address",
+        "name": "collateral",
+        "type": "address"
+      }
+    ],
+    "name": "collateralManager",
+    "outputs": [
+      {
+        "internalType": "address",
+        "name": "",
+        "type": "address"
+      }
+    ],
+    "payable": false,
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "constant": true,
+    "inputs": [
+      {
         "internalType": "enum MixinSystemSettings.CrossDomainMessageGasLimits",
         "name": "gasLimitType",
         "type": "uint8"
@@ -681,6 +775,27 @@
   },
   {
     "constant": true,
+    "inputs": [
+      {
+        "internalType": "address",
+        "name": "collateral",
+        "type": "address"
+      }
+    ],
+    "name": "interactionDelay",
+    "outputs": [
+      {
+        "internalType": "uint256",
+        "name": "",
+        "type": "uint256"
+      }
+    ],
+    "payable": false,
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "constant": true,
     "inputs": [],
     "name": "isResolverCached",
     "outputs": [
@@ -743,6 +858,27 @@
     "constant": true,
     "inputs": [],
     "name": "liquidationRatio",
+    "outputs": [
+      {
+        "internalType": "uint256",
+        "name": "",
+        "type": "uint256"
+      }
+    ],
+    "payable": false,
+    "stateMutability": "view",
+    "type": "function"
+  },
+  {
+    "constant": true,
+    "inputs": [
+      {
+        "internalType": "address",
+        "name": "collateral",
+        "type": "address"
+      }
+    ],
+    "name": "minCratio",
     "outputs": [
       {
         "internalType": "uint256",
@@ -902,6 +1038,46 @@
     "constant": false,
     "inputs": [
       {
+        "internalType": "address",
+        "name": "_collateral",
+        "type": "address"
+      },
+      {
+        "internalType": "uint256",
+        "name": "_collapseFeeRate",
+        "type": "uint256"
+      }
+    ],
+    "name": "setCollapseFeeRate",
+    "outputs": [],
+    "payable": false,
+    "stateMutability": "nonpayable",
+    "type": "function"
+  },
+  {
+    "constant": false,
+    "inputs": [
+      {
+        "internalType": "address",
+        "name": "_collateral",
+        "type": "address"
+      },
+      {
+        "internalType": "address",
+        "name": "_newCollateralManager",
+        "type": "address"
+      }
+    ],
+    "name": "setCollateralManager",
+    "outputs": [],
+    "payable": false,
+    "stateMutability": "nonpayable",
+    "type": "function"
+  },
+  {
+    "constant": false,
+    "inputs": [
+      {
         "internalType": "enum MixinSystemSettings.CrossDomainMessageGasLimits",
         "name": "_gasLimitType",
         "type": "uint8"
@@ -1017,6 +1193,26 @@
     "constant": false,
     "inputs": [
       {
+        "internalType": "address",
+        "name": "_collateral",
+        "type": "address"
+      },
+      {
+        "internalType": "uint256",
+        "name": "_interactionDelay",
+        "type": "uint256"
+      }
+    ],
+    "name": "setInteractionDelay",
+    "outputs": [],
+    "payable": false,
+    "stateMutability": "nonpayable",
+    "type": "function"
+  },
+  {
+    "constant": false,
+    "inputs": [
+      {
         "internalType": "uint256",
         "name": "_issuanceRatio",
         "type": "uint256"
@@ -1068,6 +1264,26 @@
       }
     ],
     "name": "setLiquidationRatio",
+    "outputs": [],
+    "payable": false,
+    "stateMutability": "nonpayable",
+    "type": "function"
+  },
+  {
+    "constant": false,
+    "inputs": [
+      {
+        "internalType": "address",
+        "name": "_collateral",
+        "type": "address"
+      },
+      {
+        "internalType": "uint256",
+        "name": "_minCratio",
+        "type": "uint256"
+      }
+    ],
+    "name": "setMinCratio",
     "outputs": [],
     "payable": false,
     "stateMutability": "nonpayable",
